--- a/src/assets/styles/components/Header.scss
+++ b/src/assets/styles/components/Header.scss
@@ -8,6 +8,10 @@
     top: 0px;
     width: 100%;
   }
+
+  .isLogin, .isRegister {
+    background-image: linear-gradient(#21c08b, #8f57fd);
+  }
   
   .header__img {
     margin-left: 30px;
@@ -52,6 +56,8 @@
   }
   
   .header__menu--profile img {
+    border-radius: 100%;
     margin-right: 8px;
     width: 40px;
+    object-fit: cover;
   }
